<resources>
    <string name="app_name">AvventoRadio</string>
    <string name="action_settings">Settings</string>
    <string name="link_schedule">Schedule</string>
    <string name="link_ads">Ads</string>
    <string name="link_share_apk">Share App</string>
    <string name="link_order">Order Programs</string>
    <string name="page_broadcasts">Previous broadcasts</string>
    <string name="page_prayerRequest">Prayer Request</string>
    <string name="link_media">Avvento Media</string>
    <string name="link_whatsapp">Q/A Whatsapp</string>
    <string name="link_telegram_group">Telegram listeners</string>
    <string name="link_whatsapp_group">Whatsapp listeners</string>
    <string name="link_radio">Web Radio</string>
    <string name="link_facebook">Facebook</string>
    <string name="link_youtube">Youtube</string>
    <string name="link_mixcloud">MixCloud</string>
    <string name="page_explore">Explore</string>
    <string name="loading">LOADING...</string>
    <string name="exit">Exit</string>
    <string name="explore_Headline">AvventoRadio Program Updates</string>
    <string name="start_streaming">START LISTENING</string>
    <string name="pause_streaming">PAUSE LISTENING</string>
    <string name="connect_to_internet">Connect internet</string>
    <string name="slogan">Flying the gospel to the whole world</string>
    <string name="info">AvventoMedia is a non profit religious Bible based organisation focused on flying the gospel to the whole world through production, promotion and publication of Bible based textual, audible and visual content not only to preserve Biblical sanctity but also inculcate Biblical values such as love, faithfulness, joy, peace, patience, kindness, meekness, self control, hope and the like in the society in preparation for life hereafter. AvventoMedia’s content is branded as AvventoProductions on youtube, facebook, soundcloud and mixcloud. AvventoProductions can also be found on Avvento Online radio here as well as on the free to air 3ABN Uganda Television.</string>
    <string name="prayerRequest_required">Required*</string>
    <string name="title_PrayerRequest">PRAYER REQUEST</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
